<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" xmlns:app="http://schemas.android.com/apk/res/com.yammy.abecede">

    <android.support.v7.widget.GridLayout        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="6"
        app:rowCount="5"
        android:layout_centerInParent="true" >
        <Button
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="0"
            android:text="@string/buttonA" />
        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="0"
            android:text="@string/buttonB" />
        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="0"
            android:text="@string/buttonC" />
        <Button
            android:id="@+id/button4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="0"
            android:text="@string/buttonD" />
        <Button
            android:id="@+id/button5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="4"
            app:layout_row="0"
            android:text="@string/buttonE" />
        <Button
            android:id="@+id/button6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="5"
            app:layout_row="0"
            android:text="@string/buttonF" />
        
        <Button
            android:id="@+id/button7"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1"
            android:text="@string/buttonG" />
        <Button
            android:id="@+id/button8"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="1"
            android:text="@string/buttonH" />
        <Button
            android:id="@+id/button9"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="1"
            android:text="@string/buttonI" />
        <Button
            android:id="@+id/button10"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="1"
            android:text="@string/buttonJ" />
        <Button
            android:id="@+id/button11"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="4"
            app:layout_row="1"
            android:text="@string/buttonK" />
        <Button
            android:id="@+id/button12"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="5"
            app:layout_row="1"
            android:text="@string/buttonL" />
        
        <Button
            android:id="@+id/button13"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="2"
            android:text="@string/buttonM" />
        <Button
            android:id="@+id/button14"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="2"
            android:text="@string/buttonN" />
        <Button
            android:id="@+id/button15"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="2"
            android:text="@string/buttonO" />
        <Button
            android:id="@+id/button16"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="2"
            android:text="@string/buttonP" />
        <Button
            android:id="@+id/button17"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="4"
            app:layout_row="2"
            android:text="@string/buttonQ" />
        <Button
            android:id="@+id/button18"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="5"
            app:layout_row="2"
            android:text="@string/buttonR" />
        
        <Button
            android:id="@+id/button19"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="3"
            android:text="@string/buttonS" />
        <Button
            android:id="@+id/button20"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="3"
            android:text="@string/buttonT" />
        <Button
            android:id="@+id/button21"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="3"
            android:text="@string/buttonU" />
        <Button
            android:id="@+id/button22"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="3"
            android:text="@string/buttonV" />
        <Button
            android:id="@+id/button23"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="4"
            app:layout_row="3"
            android:text="@string/buttonW" />
        <Button
            android:id="@+id/button24"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="5"
            app:layout_row="3"
            android:text="@string/buttonX" />
        
        <Button
            android:id="@+id/button25"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="4"
            android:text="@string/buttonY" />
        <Button
            android:id="@+id/button26"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_column="3"
            app:layout_row="4"
            android:text="@string/buttonZ" />
    </android.support.v7.widget.GridLayout>

</RelativeLayout>
